--- a/draft.html
+++ b/draft.html
@@ -34,7 +34,7 @@
       <br /><br />
       <em>Medium: Pencil and Colored Pencil on Newsprint Paper</em>
       <br /><br />
-        <p>This was our rough drawing for the <a href = 'sculpture.html'>Child at Play Sculpture</a>. It started off as just a drawing of a gender-neutral child standing in an apparent playing pose, but towards the end of the project, when the time came to paint the figure, we added color to the drawing as a kind of reference to how we would design the actual sculpture. This started off as a drawing of a girl wearing a Greek toga, but as we continued to develop it, we eventually made the gender ambiguous and replaced the toga with a scheme of colors. At the end, our sculpture had multiple shades of blue, and also had several clouds around its torso.</p>
+        <p>This was our rough drawing for the <a href = 'sculpture.html'>Child at Play Sculpture</a>. It started off as just a drawing of a child standing in an apparent playing pose, but towards the end of the project, when the time came to paint the figure, we added color to the drawing as a kind of reference to how we would design the actual sculpture. This started off as a drawing of a girl wearing a Greek toga, but as we continued to develop it, we eventually made the gender ambiguous and replaced the toga with a scheme of colors. At the end, our sculpture had multiple shades of blue, and also had several clouds around its torso.</p>
     </main>
   <script src = "bootstrap portfolio.js"></script>
   <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
