--- a/cy3.html
+++ b/cy3.html
@@ -25,36 +25,39 @@
           <li class="nav-item">
             <a class="nav-link" id="cy2"href="cy2.html">Cycle 2</a>
           </li>
-          <!-- <li class="nav-item dropdown">
-          <li class="nav-item dropdown">
-          <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-        </a>
-        <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-        <a class="dropdown-item" href="#">Action</a>
-        <a class="dropdown-item" href="#">Another action</a>
-        <div class="dropdown-divider"></div>
-        <a class="dropdown-item" href="#">Something else here</a>
-      </div>
-    </li>
-  -->
-  <li class="nav-item">
-    <a class="nav-link disabled" id="cy3" href="#">Cycle 3</a>
-  </li>
-  <li class="nav-item">
-    <a class="nav-link" id="cy4" href="cy4.html">Cycle 4</a>
-    <li class="nav-item">
-        <a class="nav-link" id="cy5" href="cy5.html">Cycle 5</a>
-    <li class="nav-item">
-      <a class="nav-link" id="biome" href="biome.html">Biome Projects</a>
-    </li>
-  </ul>
-  </div>
-  </nav>
-  </navbar>
-    <main id="main">
-      <h1>Cycle 3 Artwork</h1>
-<h1>This page is in process of being built</h1>
-</main>
+          <li class="nav-item">
+            <a class="nav-link disabled" id="cy3" href="#">Cycle 3</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" id="cy4" href="cy4.html">Cycle 4</a>
+            <li class="nav-item">
+                <a class="nav-link" id="cy5" href="cy5.html">Cycle 5</a>
+            <li class="nav-item">
+              <a class="nav-link" id="biome" href="biome.html">Biome Projects</a>
+            </li>
+          </ul>
+          </div>
+          </nav>
+          </navbar>
+            <main id="main">
+              <br />
+        <h2 id="thingHead"><strong>Cycle 2 Artwork</strong></h2>
+        <p>In Cycle 2, our projects were mainly centered around Classical Art. We studied the Archaic, Classical and Hellenistic art styles of Ancient Greece, as well as aspects of Roman art. Our main project was to create a sculpture which showed aspects of these art forms, but we spent much of the time watching videos and taking notes about this. Overall, it proved to be a fascinating topic, which merged both history and art.</p>
+        <p><em>Click the links to view each project</em></p>
+        </main>
+        <p id='descriptors'>&nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp;  &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp;  &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp;  &nbsp; &nbsp; <a class='descLinks'href="sculpture.html"><strong>Child At Play Sculpture</strong></a>
+        &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp;  &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; <a class='descLinks'href="draft.html"><strong>Child At Play Draft</strong></a>
+        </p>
+        <br />
+        &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp;
+        &nbsp;&nbsp;&nbsp;&nbsp;&nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp;&nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp;&nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp;&nbsp; &nbsp; &nbsp; &nbsp; &nbsp;
+        <img id = 'sculpture3' src = "Final_Sculpture.png"width="20%"height="50%"/>
+        &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+        <img class="artworkImgs"src = "Child_at_play.png" height="50%"width="20%"/>
+        &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp;
+
+        <br />
+        </main>
 
 <script src = "bootstrap portfolio.js"></script>
 <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
