--- a/cy3.html
+++ b/cy3.html
@@ -41,8 +41,8 @@
           </navbar>
             <main id="main">
               <br />
-        <h2 id="thingHead"><strong>Cycle 2 Artwork</strong></h2>
-        <p>In Cycle 2, our projects were mainly centered around Classical Art. We studied the Archaic, Classical and Hellenistic art styles of Ancient Greece, as well as aspects of Roman art. Our main project was to create a sculpture which showed aspects of these art forms, but we spent much of the time watching videos and taking notes about this. Overall, it proved to be a fascinating topic, which merged both history and art.</p>
+        <h2 id="thingHead"><strong>Cycle 3 Artwork</strong></h2>
+        <p>In Cycle 3, we began to study Renaissance Art. We focused a lot on sketching, and also learned about the techniques and works of artists such as Michelangelo, Raphael and Donatello. It proved to be a very interesting topic, and it really helped us to understand the evolution of art.</p>
         <p><em>Click the links to view each project</em></p>
         </main>
         <p id='descriptors'>&nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp;  &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp;  &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp;  &nbsp; &nbsp; <a class='descLinks'href="sculpture.html"><strong>Child At Play Sculpture</strong></a>
